# MindRoveSDK

./: .gitignore  README.md
.github/workflows/: cpp-check.yml
android/aar/: mindRove-debug_v1_1.aar  mindRove-release_v2_0.aar  mindRove-release_v3_0.aar  mindRove-release_v3_1.aar
examples/cpp/: CMakeLists.txt  README.md
examples/cpp/get_data/: CMakeLists.txt
examples/cpp/get_data/src/: get_data.cpp  get_data_twice.cpp  markers.cpp  multiple_streamers.cpp  syncbox_get_data.cpp
examples/cpp/ml/src/: eeg_metrics.cpp  eeg_metrics_ci.cpp
examples/cpp/ml/src/dyn_lib_test/: dyn_lib_test.cpp  dyn_lib_test.h
examples/cpp/signal_processing/src/: band_power.cpp  band_power_all.cpp  csp.cpp  denoising.cpp  downsampling.cpp  ica.cpp  peaks_detection.cpp  serialization.cpp  signal_filtering.cpp  transforms.cpp  windowing.cpp
examples/cs/boardconfig/: Program.cs  boardconfig.csproj  boardconfig.sln
examples/cs/boardconfig/Properties/: AssemblyInfo.cs
examples/cs/concentration/: concentration_example.sln
examples/cs/concentration/concentration_example/: Form1.Designer.cs  Form1.cs  Program.cs  concentration_example.csproj
examples/cs/concentration/concentration_example/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
examples/cs/get_data/: mindrove_get_data.cs  mindrove_get_data.csproj
examples/matlab/: BandPower.m  BandPowerAll.m  BrainFlowGetData.m  Config.m  Denoising.m  Downsampling.m  EEGMetrics.m  Markers.m  MindRoveGetData.m  README.md  Serialization.m  SignalFiltering.m  SimpleVisualizer.m  Transforms.m
examples/matlab/TROUBLESHOOTING_PLEASE READ THESE/: The compiler issue_please use the Visual C++ compiler.txt
examples/matlab/mindrove/: BoardShim.m  DataFilter.m  MLModel.m  MindRove.prj  MindRoveExitCodes.m  MindRoveMetrics.m  MindRovePresets.m  demos.xml
examples/matlab/mindrove/inc/: README.md  board_controller.h
examples/matlab/mindrove/lib/: README.md
examples/python/boardconfig/: boardconfig.py
examples/python/plot_real_time/: plot_ppg_real_time.py  plot_real_time.py  plot_real_time_min.py  plot_syncbox_real_time_min.py  requirements.txt
examples/unity/: README.md
examples/unity/concentration/: Assembly-CSharp.csproj  MyFirstGame.sln  UpgradeLog.htm
examples/unity/concentration/Assets/: MindRoveBluetooth.lib  Mindrove.lib  NewBehaviourScript.cs  WaveLib.lib  s.unity
examples/unity/concentration/ProjectSettings/: ProjectSettings.asset
inc/: board_shim.h  data_filter.h  mindrove_array.h  mindrove_constants.h  mindrove_exception.h  mindrove_input_params.h  mindrove_model_params.h  ml_model.h
linux/inc/: board_controller.h  board_shim.h  mindrove_constants.h  mindrove_exception.h  mindrove_input_params.h  mindrove_model_params.h  ml_model.h
macos/lib/: libBoardController.dylib  libDataHandler.dylib
osx/: libBoardController.dylib  libDataHandler.dylib  libMLModule.dylib  libMindRoveWrapper.dylib
win/inc/: data_filter.h  mindrove_array.h
win/lib32/: BoardController32.lib  DSPFilters.lib  DataHandler32.lib  MLModule32.lib  MindRoveBluetooth32.lib  Mindrove32.lib  WaveLib.lib
win/lib64/: BoardController.lib  DSPFilters.lib  DataHandler.lib  MLModule.lib  Mindrove.lib  WaveLib.lib
win/matlab/: BoardIDs.m  BoardShim.m  MindRoveClassifiers.m  MindRoveInputParams.m  MindRoveMetrics.m  MindRoveModelParams.m
win/x64/: BoardController.lib  DSPFilters.lib  DataHandler.lib  MLModule.lib  Mindrove.lib  WaveLib.lib  kissfft-double.lib
win/x86/: BoardController32.lib  DSPFilters.lib  DataHandler32.lib  MLModule32.lib  Mindrove32.lib  WaveLib.lib  kissfft-double.lib
